data/derived/fa15/progs/unify/prog2677.ml.out
Characters 80-82:
  | Sine e' -> sin (pi * exprToString e')
                    ^^
Error: This expression has type float but an expression was expected of type
         int
